NetBSD Problem Report #41032

From root@kefren.netbsd.ro  Tue Mar 17 15:39:18 2009
Return-Path: <root@kefren.netbsd.ro>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 194BE63B8EC
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 17 Mar 2009 15:39:18 +0000 (UTC)
Message-Id: <20090317153915.33141434648@kefren.netbsd.ro>
Date: Tue, 17 Mar 2009 17:38:29 +0200 (EET)
From: kefren@netbsd.org
Reply-To: kefren@netbsd.org
To: gnats-bugs@gnats.NetBSD.org
Subject: bzip2 SIGSEGV while trying to decompress a file
X-Send-Pr-Version: 3.95

>Number:         41032
>Category:       bin
>Synopsis:       bunzip2 crash on monodevelop-1.9.3.tar.gz2
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Mar 17 15:40:00 +0000 2009
>Closed-Date:    Tue Apr 07 04:33:20 +0000 2009
>Last-Modified:  Wed Apr 08 00:10:02 +0000 2009
>Originator:     Mihai Chelaru
>Release:        NetBSD 5.99.7
>Organization:

>Environment:


System: NetBSD kefren.netbsd.ro 5.99.7 NetBSD 5.99.7 (Home) #16: Sat Feb 28 19:42:18 EET 2009 root@kefren.netbsd.ro:/disk2/work/src/sys/arch/amd64/compile/obj/Home amd64
Architecture: x86_64
Machine: amd64
>Description:

	bunzipping monodevelop crashes here. 100% reproductible. I did try it on an Windows
	system and WinRar looked happy about it.

$ bunzip2 monodevelop-1.9.3.tar.bz2 

bunzip2: Caught a SIGSEGV or SIGBUS whilst decompressing.

   Possible causes are (most likely first):
   (1) The compressed data is corrupted, and bzip2's usual checks
       failed to detect this.  Try bzip2 -tvv my_file.bz2.
   (2) This computer has unreliable memory or cache hardware
       (a surprisingly common problem; try a different machine.)
   (3) A bug in the compiler used to create this executable
       (unlikely, if you didn't compile bzip2 yourself.)
   (4) A real bug in bzip2 -- I hope this should never be the case.
   The user's manual, Section 4.3, has more info on (2) and (3).

   If you suspect this is a bug in bzip2, or are unsure about (2)
   or (3), feel free to report it to me at: jseward@bzip.org.
   Section 4.3 of the user's manual describes the info a useful
   bug report should have.  If the manual is available on your
   system, please try and read it before mailing me.  If you don't
   have the manual or can't be bothered to read it, mail me anyway.

	Input file = monodevelop-1.9.3.tar.bz2, output file = monodevelop-1.9.3.tar

It is possible that the compressed file(s) have become corrupted.
You can use the -tvv option to test integrity of such files.

You can use the `bzip2recover' program to attempt to recover
data from undamaged sections of corrupted files.

bunzip2: Deleting output file monodevelop-1.9.3.tar, if it exists.

>How-To-Repeat:
	download ftp://ftp.netbsd.org/pub/NetBSD/misc/kefren/monodevelop-1.9.3.tar.bz2 or directly from monodevelop.org
	bunzip2 it

>Fix:


>Release-Note:

>Audit-Trail:
From: Mihai Chelaru <kefren@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41032 CVS commit: src/dist/bzip2
Date: Mon, 6 Apr 2009 19:33:22 +0000

 Module Name:	src
 Committed By:	kefren
 Date:		Mon Apr  6 19:33:22 UTC 2009

 Modified Files:
 	src/dist/bzip2: bzip2.c

 Log Message:
 fix null references introduced while merging bzip2 1.0.5
 fixes PR/41032
 ok christos@


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 src/dist/bzip2/bzip2.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: kefren@NetBSD.org
State-Changed-When: Tue, 07 Apr 2009 04:33:20 +0000
State-Changed-Why:
Fixed by src/dist/bzip2/bzip2.c 1.7


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41032 CVS commit: [netbsd-5] src/dist/bzip2
Date: Wed, 8 Apr 2009 00:06:09 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Wed Apr  8 00:06:09 UTC 2009

 Modified Files:
 	src/dist/bzip2 [netbsd-5]: bzip2.c

 Log Message:
 Pull up following revision(s) (requested by kefren in ticket #676):
 	dist/bzip2/bzip2.c: revision 1.7
 fix null references introduced while merging bzip2 1.0.5
 fixes PR/41032
 ok christos@


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.6.8.1 src/dist/bzip2/bzip2.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.