Pull up following revision(s) (requested by kefren in ticket #676): 	dist/bzip2/bzip2.c: revision 1.7 fix null references introduced while merging bzip2 1.0.5 fixes PR/41032 ok christos@